crates/rskit-file/tests/snapshots/golden__file_meta_ai_generated_jpg.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "ai-generated.jpg",
  "extension": "jpg",
  "mime_type": "image/jpeg",
  "size": 15448,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
