crates/rskit-file/tests/snapshots/golden__file_meta_ai_generated_mp4.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "ai-generated.mp4",
  "extension": "mp4",
  "mime_type": "video/mp4",
  "size": 477826,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
