crates/rskit-file/tests/snapshots/golden__file_meta_ai_generated_wav.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "ai-generated.wav",
  "extension": "wav",
  "mime_type": "audio/x-wav",
  "size": 82028,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
