crates/rskit-file/tests/snapshots/golden__file_meta_real_photo_jpg.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "real-photo.jpg",
  "extension": "jpg",
  "mime_type": "image/jpeg",
  "size": 35274,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
