crates/rskit-file/tests/snapshots/golden__file_meta_real_voice_wav.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "real-voice.wav",
  "extension": "wav",
  "mime_type": "audio/x-wav",
  "size": 28204,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
