crates/rskit-file/tests/snapshots/golden__file_meta_sample_png.snap
---
source: crates/rskit-file/tests/golden.rs
expression: meta
---
{
  "name": "sample.png",
  "extension": "png",
  "mime_type": "image/png",
  "size": 135770,
  "created_at": "[timestamp]",
  "modified_at": "[timestamp]",
  "checksum": null
}
